--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Mynerve&family=Shadows+Into+Light&display=swap" rel="stylesheet">
-
+ <link rel = "stylesheet" type="text/css" href="style.css">
+ <script src="main.js"></script>
         <title>Sound</title>
     </head>
 
